# work_abroad_api

./: .gitignore  Dockerfile  README.md  asgi.py  bitbucket-pipelines.yml  docker-compose.yml  pyproject.toml  wsgi.py
api/chat/: admin.py  models.py  serializers.py  urls.py  views.py
api/chat/migrations/: 0001_initial.py  0002_auto_20200717_0910.py  0002_auto_20200717_1102.py  0002_auto_20200717_1123.py  0002_auto_20200719_2020.py  0002_auto_20200727_1006.py  0003_auto_20200717_1126.py
api/chat/tests/: test_model_view_sets_3.py
api/core/: constants.py  mixins.py  models.py  permissions.py
api/core/tests/: test_filters.py  test_mixins.py  test_pagination.py
api/structure/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/structure/migrations/: 0001_initial.py  0002_auto_20200715_1540.py  0002_auto_20200716_1429.py  0002_auto_20200717_0605.py  0002_auto_20200717_0910.py  0002_auto_20200717_1102.py  0002_auto_20200717_1123.py  0002_auto_20200719_2020.py  0002_auto_20200727_1006.py  0003_auto_20200717_1126.py
api/structure/tests/: test_model_view_sets_2.py
api/users/: admin.py  models.py  serializers.py  urls.py  views.py
api/users/migrations/: 0001_initial.py
api/users/tests/: test_model_view_sets_1.py
settings/: base.py  local.py  pipelines.py
tests/: test_work_abroad_api.py
urls/: urls.py
